test: add tests for mappers